# Multimodal-Video-Retrieval-Platform

./: .gitignore  Architecture.md  requirements.txt
surveillance/: README.md  pyproject.toml
surveillance/infra/docker/: docker-compose.yml
surveillance/infra/migrations/: alembic.ini  env.py
surveillance/infra/migrations/versions/: 0001.py  0002.py
surveillance/scripts/: smoke_test.py
surveillance/services/detection/: main.py
surveillance/services/detection/core/: config.py  logging.py
surveillance/services/detection/db/: database.py
surveillance/services/detection/models/: schemas.py
surveillance/services/detection/services/: detection.py  grounding_dino.py  queue.py  storage.py
surveillance/services/detection/tests/: test_detection.py
surveillance/services/detection/workers/: consumer_worker.py
surveillance/services/embedding/: main.py  testing.md
surveillance/services/embedding/core/: config.py
surveillance/services/embedding/db/: database.py
surveillance/services/embedding/models/: schemas.py
surveillance/services/embedding/services/: clip_model.py  embedding.py  queue.py  storage.py
surveillance/services/embedding/tests/: test_embedding.py
surveillance/services/embedding/workers/: consumer_worker.py
surveillance/services/indexing/: Dockerfile  main.py  pyproject.toml
surveillance/services/indexing/core/: config.py  logging.py
surveillance/services/indexing/db/: database.py
surveillance/services/indexing/models/: schemas.py
surveillance/services/indexing/services/: indexing.py  qdrant.py  queue.py
surveillance/services/indexing/tests/: test_indexing.py
surveillance/services/indexing/workers/: consumer_worker.py
surveillance/services/ingestion/: Dockerfile  __init__.py  main.py  pyproject.toml  testing.md
surveillance/services/ingestion/api/: routes.py
surveillance/services/ingestion/core/: config.py  logging.py
surveillance/services/ingestion/db/: database.py  models.py
surveillance/services/ingestion/models/: schemas.py
surveillance/services/ingestion/services/: ingestion.py  queue.py  storage.py  validator.py
surveillance/services/ingestion/tests/: test_ingestion.py
surveillance/services/ingestion/workers/: fs_watcher.py
surveillance/services/preprocessing/: Dockerfile  main.py  pyproject.toml
surveillance/services/preprocessing/api/: routes.py
surveillance/services/preprocessing/core/: config.py  logging.py
surveillance/services/preprocessing/db/: database.py
surveillance/services/preprocessing/models/: schemas.py
surveillance/services/preprocessing/services/: clip_generator.py  enhancer.py  frame_extractor.py  preprocessing.py  quality_filter.py  queue.py  scene_segmenter.py  storage.py  transcoder.py
surveillance/services/preprocessing/tests/: conftest.py  test_preprocessing.py
surveillance/services/preprocessing/workers/: consumer_worker.py
surveillance/services/search/: Dockerfile  main.py  pyproject.toml
surveillance/services/search/api/: routes.py
surveillance/services/search/core/: config.py
surveillance/services/search/db/: database.py
surveillance/services/search/models/: schemas.py
surveillance/services/search/services/: cache.py  clip_encoder.py  qdrant.py  search.py
surveillance/services/search/tests/: test_search.py
surveillance/services/search/workers/: __init__.py
surveillance/shared/: pyproject.toml
surveillance/shared/shared/: db.py  logging.py
surveillance/shared/shared/config/: base.py
surveillance/shared/shared/events/: detection_complete.py  embeddings_ready.py  frame_extracted.py  video_ingested.py
surveillance/shared/shared/models/: detection_result.py  embedding_record.py  video.py  video_record.py
surveillance/shared/shared/queue/: consumer.py  publisher.py
surveillance/shared/shared/storage/: client.py
