[project]
name = "preprocessing-service"
version = "0.1.0"
description = "Video normalization, frame extraction, scene segmentation, clip generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aio-pika>=9.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "minio>=7.2",
    "tenacity>=8.2",
    "structlog>=24.1",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
